@@ -974,6 +974,8 @@ int mood_change(object *op, object *caster, object *spell) {
                 if (did_make_save(head, head->level, at))
                     continue;
             } else {   /* spell->attacktype */
+                const char *value;
+
                 /*
                  * Spell has no attacktype (charm&such), so we'll have a specific saving:
                  * if spell level < monster level, no go
@@ -990,6 +992,14 @@ int mood_change(object *op, object *caster, object *spell) {
                     continue;
                 if (random_roll(0, 100, caster, PREFER_LOW) >= (20+MIN(50, 2*(level-head->level))))
                     /* Failed, no effect */
+                    continue;
+
+                /*
+                 * There was no way to ensure immunity, so added a key/value for that.
+                 * Nicolas, september 2010.
+                 */
+                value = object_get_value(head, "no_mood_change");
+                if (value && strcmp(value, "1") == 0)
                     continue;
             }
 
